# Algorithm

./: CMakeLists.txt
010_Stack&Queue/: CMakeLists.txt  栈和队列注意事项
011_MonotonicStack/: CMakeLists.txt  单调栈注意事项
012_BinaryTree/: CMakeLists.txt  二叉树注意事项
013_UnionFindSet/: CMakeLists.txt  并查集注意事项
014_DFS/: CMakeLists.txt  深度优先搜索注意事项
014_DFS/01_LC200/: main.cpp
014_DFS/02_LG_P1706/: main.cpp
014_DFS/03_LG_P8801/: main.cpp
014_DFS/04_LG_P1036/: main.cpp
014_DFS/05_LG_P1219/: main.cpp
014_DFS/06_LG_P1101/: main.cpp
014_DFS/07_LG_P9241/: main.cpp
015_BFS/: CMakeLists.txt  广度优先搜索注意事项
016_betterSearch/: CMakeLists.txt  搜索优化注意事项
017_ChainForwardStar/: CMakeLists.txt  链式前向星注意事项
018_ShortPath/: CMakeLists.txt  最短路径.pptx  最短路径算法注意事项
019_TopologicalSort/: CMakeLists.txt  拓扑排序注意事项
01_Brute-forceenumeration/: 1.枚举&模拟.pptx  CMakeLists.txt
020_MiniTree/: CMakeLists.txt  最小生成树
021_KMP/: CMakeLists.txt  KMP算法注意事项.txt
022_EulerainPath/: CMakeLists.txt  欧拉路径注意事项
023_StringHash/: CMakeLists.txt  字符串哈希注意事项
024_LinearDP/: CMakeLists.txt  线性DP注意事项
025_IntervalDP/: CMakeLists.txt  区间DP注意事项
02_PrefixSum-difference/: 2.前缀和&差分.pptx  CMakeLists.txt  前缀和,差分注意事项
03_Slidingwindow/: 3.尺取法.pptx  CMakeLists.txt  滑动窗口(尺取法)注意事项
0418_meaningful/: CMakeLists.txt
04_BinarySearch/: CMakeLists.txt  二分注意事项
04_BinarySearch/01_LG_P1837/: main.cpp
04_BinarySearch/02_LCLCR073/: main.cpp
04_BinarySearch/03_LG_P2678/: main.cpp
04_BinarySearch/04_LG_P1182/: main.cpp
04_BinarySearch/05_LG_P1314/: main.cpp
04_BinarySearch/06_LG_P3853/: main.cpp
04_BinarySearch/07_LG_P1824/: main.cpp
04_BinarySearch/08_LG_P10909/: main.cpp
05_MathWay/: CMakeLists.txt  常用数学方法
06_MathWayQuestion/: CMakeLists.txt
070418_STL/: CMakeLists.txt
07_Greedy/: CMakeLists.txt  贪心注意事项
(+84 files in other folders)
