cmake_minimum_required(VERSION 4.0)
project(Algorithm)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(01_Brute-forceenumeration)
add_subdirectory(02_PrefixSum-difference)
add_subdirectory(03_Slidingwindow)
add_subdirectory(0418_meaningful)
add_subdirectory(04_BinarySearch)
add_subdirectory(05_MathWay)
add_subdirectory(06_MathWayQuestion)
add_subdirectory(07_Greedy)
add_subdirectory(08_Recursion&DivideConquer)
add_subdirectory(09_Listlink)
add_subdirectory(010_Stack&Queue)
add_subdirectory(011_MonotonicStack)
add_subdirectory(012_BinaryTree)
add_subdirectory(013_UnionFindSet)
add_subdirectory(014_DFS)
add_subdirectory(015_BFS)
add_subdirectory(016_betterSearch)
add_subdirectory(017_ChainForwardStar)
add_subdirectory(018_ShortPath)
add_subdirectory(019_TopologicalSort)
add_subdirectory(020_MiniTree)
add_subdirectory(070418_STL)
add_subdirectory(021_KMP)
add_subdirectory(022_EulerainPath)